adicionando produtos e paginas de compras

--- a/loja_app/templates/loja_app/base.html
+++ b/loja_app/templates/loja_app/base.html
@@ -65,6 +65,9 @@
     <li><a href="#">Emagrecedores</a></li>
     <li><a href="#">Acessórios</a></li>
     <li><a href="#">Marcas</a></li>
+    <li><a href="{% url 'produtos' %}">Produtos</a></li>
+    <li><a href="{% url 'carrinho' %}">Carrinho</a></li>
+    <li><a href="{% url 'finalizar_compra' %}">Finalizar Compra</a></li>
   </ul>
 </div>
 
