--- a/loja_app/templates/loja_app/carrinho.html
+++ b/loja_app/templates/loja_app/carrinho.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -84,3 +89,4 @@
     </script>
 </body>
 </html>
+{% endblock %}
