--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -27,7 +27,7 @@
         }
 
         h1 {
-            color: #5FA052;
+            color: #728f7f;
             margin-bottom: 1em;
         }
 
@@ -41,13 +41,13 @@
         }
 
         input[type="submit"] {
-            background-color: #5FA052;
+            background-color: #728f7f;
             color: white;
             cursor: pointer;
         }
 
         input[type="submit"]:hover {
-            background-color: #4b8f41;
+            background-color: #728f7f;
         }
 
         .message {
@@ -59,7 +59,7 @@
         .button {
             width: 100%; /* Garantindo que todos os botões tenham a mesma largura */
             padding: 0.8em;
-            background-color: #5FA052;
+            background-color: #728f7f;
             color: white;
             border: none;
             border-radius: 4px;
@@ -69,7 +69,7 @@
         }
 
         .button:hover {
-            background-color: #4b8f41;
+            background-color: #728f7f;
         }
 
         /* Remover o sublinhado nos botões dentro de links */
