--- a/loja_app/templates/loja_app/base.html
+++ b/loja_app/templates/loja_app/base.html
@@ -89,6 +89,9 @@
         <li>
           <a class="toggle">Ofertas Naturais</a>
           <ul class="submenu">
+            <li><a href="{% url 'produtos' %}">Produtos</a></li>
+            <li><a href="{% url 'carrinho' %}">Carrinho</a></li>
+            <li><a href="{% url 'finalizar_compra' %}">Finalizar Compra</a></li>
             <li><a href="{% url 'suplementos' %}">💊 Suplementos Essenciais</a></li>
             <li><a href="{% url 'produtos_naturais' %}">🌱 Produtos Naturais</a></li>
             <li><a href="{% url 'produtos_corporais' %}">🧴 Cuidados Corporais</a></li>
