--- a/usuarios/templates/usuarios/cadastro.html
+++ b/usuarios/templates/usuarios/cadastro.html
@@ -28,7 +28,7 @@
         }
 
         h2 {
-            color: #5FA052;
+            color: #728f7f;
             margin-bottom: 1em;
         }
 
@@ -44,7 +44,7 @@
         input[type="submit"] {
             width: 100%;
             padding: 0.8em;
-            background-color: #5FA052;
+            background-color: #728f7f;
             color: white;
             border: none;
             border-radius: 4px;
@@ -53,13 +53,13 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #4b8f41;
+            background-color: #728f7f;
         }
 
         .create-account-btn, .home-btn {
             width: 100%;
             padding: 0.8em;
-            background-color: #4b8f41;
+            background-color: #728f7f;
             color: white;
             border: none;
             border-radius: 4px;
@@ -72,7 +72,7 @@
         }
 
         .create-account-btn:hover, .home-btn:hover {
-            background-color: #3c7a35;
+            background-color: #728f7f;
         }
 
         /* Remover o sublinhado nos botões dentro de links */
