adicionando mudanças no css

--- a/loja_app/static/css/styles.css
+++ b/loja_app/static/css/styles.css
@@ -691,7 +691,7 @@ p, .texto-justificado, .descricao-principal {
   position: absolute;
   right: 0;
   top: 40px;
-  background-color: white;
+  background-color: #bbbbbb;
   border: 1px solid #ccc;
   padding: 15px;
   width: 200px;
@@ -748,7 +748,7 @@ main {
 }
 
 .produto-item {
-  background-color: #f9f9f9;
+  background-color: #bbbbbb;
   border: 1px solid #ddd;
   border-radius: 10px;
   width: 300px;
@@ -785,7 +785,7 @@ main {
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: #bbbbbb;
 }
 
 /* Imagem do produto */
