adicionando templates as paginas e corrigindo os links

--- a/loja_app/templates/loja_app/creatinas.html
+++ b/loja_app/templates/loja_app/creatinas.html
@@ -5,12 +5,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Produtos - Loja Nutri</title>
+        <title>Creatinas - Loja Nutri</title>
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
 
     <main>
-        <h1>Produtos Loja Nutri</h1>
+        <h1>Creatinas Loja Nutri</h1>
 
         {% comment %} Lista de Produtos {% endcomment %}
         <section class="produtos-container">
