--- a/loja_app/templates/loja_app/base.html
+++ b/loja_app/templates/loja_app/base.html
@@ -58,16 +58,47 @@
 <!-- Subtopbar -->
 <div class="subtopbar">
   <ul class="subtopbar-links">
-    <li><a href="#">Categorias</a></li>
-    <li><a href="#">Whey Protein</a></li>
-    <li><a href="#">Creatina</a></li>
-    <li><a href="#">Pre Treino</a></li>
-    <li><a href="#">Emagrecedores</a></li>
-    <li><a href="#">Acessórios</a></li>
-    <li><a href="#">Marcas</a></li>
-    <li><a href="{% url 'produtos' %}">Produtos</a></li>
-    <li><a href="{% url 'carrinho' %}">Carrinho</a></li>
-    <li><a href="{% url 'finalizar_compra' %}">Finalizar Compra</a></li>
+    <a class="toggle">Categorias
+    <ul class="submenu">
+      <li><a href="{% url 'way_protein' %}">Way Protein</a></li>
+      <li><a href="{% url 'pre_treino' %}">Pré Treino</a></li>
+      <li><a href="{% url 'emagrecedores' %}">Emagrecedores</a></li>
+      <li><a href="{% url 'acessorios' %}">Acessórios</a></li>
+      <li><a href="{% url 'bcaa' %}">Bcaa</a></li>
+      <li><a href="{% url 'albumina' %}">Albumina</a></li>
+      <li><a href="{% url 'aumento_testosterona' %}">Aumento da Testosterona</a></li>
+      <li><a href="{% url 'bebidas' %}">Bebidas</a></li>
+      <li><a href="{% url 'ciclistas' %}">Ciclistas</a></li>
+      <li><a href="{% url 'coffee' %}">Coffee</a></li>
+      <li><a href="{% url 'colageno' %}">Colágeno</a></li>
+      <li><a href="{% url 'dose_unica' %}">Dose Única</a></li>
+      <li><a href="{% url 'melatonina' %}">Melatonina</a></li>
+      <li><a href="{% url 'omega_3' %}">Omega 3</a></li>
+      <li><a href="{% url 'forca_energia' %}">Força e Energia</a></li>
+      <li><a href="{% url 'vitaminas' %}">Vitaminas</a></li>
+      <li><a href="{% url 'aumentar_massa_muscular' %}">Aumentar Massa Muscular</a></li>
+      <li><a href="{% url 'aminoacidos' %}">Aminoácidos</a></li>
+      <li><a href="{% url 'articulacoes_saudaveis' %}">Articulações Saudáveis</a></li>
+      <li><a href="{% url 'barras_de_proteinas' %}">Barras de Proteínas</a></li>
+      <li><a href="{% url 'antioxidantes' %}">Antioxidantes</a></li>
+      <li><a href="{% url 'carboidratos' %}">Carboidratos</a></li>
+      <li><a href="{% url 'glutaminas' %}">Glutaminas</a></li>
+      <li><a href="{% url 'pastas_de_amendoim' %}">Pastas de Amendoim</a></li>
+      <li><a href="{% url 'caldas_e_molhos' %}">Caldas e Molhos</a></li>
+      <li><a href="{% url 'snacks_doces' %}">Snacks e Doces</a></li>
+      <li><a href="{% url 'combos' %}">Combos</a></li>
+  </ul>
+</li>
+    <li><a href="{% url 'way_protein' %}">Way Protein</a></li>
+    <li><a href="{% url 'creatinas' %}">creatinas</a></li>
+    <li><a href="{% url 'pre_treino' %}">Pre Treino</a></li>
+    <li><a href="{% url 'emagrecedores' %}">Emagrecedores</a></li>
+    <li><a href="{% url 'acessorios' %}">Acessórios</a></li>
+    <a class="toggle">Marcas
+  <ul class="submenu">
+        <li><a href="#">Marcas</a></li>
+    </ul>
+  </li>
   </ul>
 </div>
 
@@ -277,4 +308,5 @@ function irAsCompras() {
   window.location.href = '/produtos'; // Substitua pelo link da sua página de produtos
 }
 });
+
 </script>
