--- a/loja_app/templates/loja_app/base.html
+++ b/loja_app/templates/loja_app/base.html
@@ -58,6 +58,8 @@
     </div>
   </div>
 
+   <!-- Botões centrais com ícones -->
+<ul class="subtopbar-links">
   <li>
     <a href="{% url 'way_protein' %}">
       <img src="{% static 'img/whey.png' %}" alt="Way Protein" class="menu-icon"> Way Protein
@@ -83,6 +85,7 @@
       <img src="{% static 'img/acesorios.png' %}" alt="Acessórios" class="menu-icon"> Acessórios
     </a>
   </li>
+</ul>
   
   <!-- Categorias à direita -->
   <div class="dropdown-right">
