--- a/loja_app/templates/loja_app/home.html
+++ b/loja_app/templates/loja_app/home.html
@@ -5,6 +5,15 @@
 
 {% block content %}
 
+<div class="banner-rotativo">
+  <div class="slides">
+    <div class="slide ativo"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+  </div>
+</div>
+
 <h1 class="titulo-principal">Bem-vindo ao Nutri Amorim</h1>
 <p class="descricao-principal">
   Transforme sua saúde através da nutrição alcalina, funcional e esportiva, aliada ao poder da fitoterapia.
